Use URLConnection for fetching flight data and set permissions for using "Internet", updated git ignore